--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>OSD 2016 - Open Source</title>
+		<title>OSD 2016 - Publikowanie kodu na licencji Open Source</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/osd2016.css">
@@ -75,7 +75,7 @@
         <section>
           <section>
             <h1>Open Source vs Free Software</h1>
-          </section>  
+          </section>
         </section>
 
         <!--
