--- a/index.html
+++ b/index.html
@@ -28,15 +28,9 @@
           data-background-color="#231F27"
           data-background-transition="slide"
           class="dark">
-          <p>&nbsp;</p>
-          <p>&nbsp;</p>
-          <p>&nbsp;</p>
-          <p>&nbsp;</p>
-          <p>&nbsp;</p>
-          <p>&nbsp;</p>
-          <p>&nbsp;</p>
-          <address id="title">
-            Open Source<br/>
+          <p class="vspace" />
+          <address class="title">
+            <strong>Publikacja Open Source</strong><br/>
             Krzysztof Suszyński<br/>
             Centralny Ośrodek Informatyki
           </address>
@@ -76,7 +70,269 @@
           <section>
             <h1>Open Source vs Free Software</h1>
           </section>
+					<section>
+						<h2>Open Source Software (OSS)</h2>
+						<ul>
+							<li><img src="images/logos/OpenSource.png" height="200" style="float: right" /> <mark>Program marketingowy</mark> skierowany do przedsiębiorstw</li>
+							<li class="fragment">Podkreślanie <mark>zalet</mark> technicznych i rentowności otwartych modeli rozwoju</li>
+							<li class="fragment">Pomijanie <mark>kwestii etycznych</mark> i politycznych</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Free(dom) Software</h2>
+						<ul>
+							<li><img src="images/logos/fsf-round-logo.svg" height="200" style="float: right" /> <mark>Ideologia</mark> dotycząca wytwarzania oprogramowania</li>
+							<li class="fragment">Skupia się na <mark>kwestiach etycznych</mark> i politycznych</li>
+							<li class="fragment"><mark>Cztery</mark> poziomy wolności: do uruchamiania, do analizy i modyfikacji, do redystrybucji i do dystrybucji zmodyfikowanego kodu</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Podobieństwa</h2>
+						<table>
+		            <tr>
+		              <th>&nbsp;</th>
+		              <th><img src="images/logos/OpenSource.png" height="100" /></th>
+		              <th><img src="images/logos/fsf-round-logo.svg" height="100" /></th>
+		            </tr>
+		            <tr>
+		              <td>Otwartość kodu</td>
+		              <td>tak</td>
+		              <td>tak</td>
+		            </tr>
+								<tr>
+		              <td>Wolność redystrybucji</td>
+		              <td>tak</td>
+		              <td>tak</td>
+		            </tr>
+								<tr>
+		              <td>Znaczenie</td>
+		              <td>Nie myli się z freeware</td>
+		              <td>Często mylone z freeware</td>
+		            </tr>
+
+		        </table>
+					</section>
+					<section>
+						<h2>Różnice</h2>
+						<table>
+		            <tr>
+		              <th>&nbsp;</th>
+		              <th><img src="images/logos/OpenSource.png" height="100" /></th>
+		              <th><img src="images/logos/fsf-round-logo.svg" height="100" /></th>
+		            </tr>
+		            <tr>
+		              <td>Idea</td>
+		              <td>Model biznesowy, oparty o otwartość oprogramowania</td>
+		              <td>Wolność do używania, modyfikacji i dystrybucji oprogramowania</td>
+		            </tr>
+								<tr>
+		              <td>Zakres</td>
+		              <td>Nie każdy OSS jest free</td>
+		              <td>Każdy free software jest OSS</td>
+		            </tr>
+								<tr>
+									<td>Popularność</td>
+									<td>duża</td>
+									<td>ograniczona</td>
+								</tr>
+		        </table>
+					</section>
         </section>
+
+				<section>
+					<section>
+						<h1>Modele biznesowe dla Open Source</h1>
+					</section>
+					<section>
+						<h2>Oprogramowanie otwarte nie wyklucza sprzedaży i wykorzystania w sposób komercyjny</h2>
+						<span style="display: inline-block; background: white; padding: 1em;">
+              <img height="100" src="images/logos/zabbix-logo.png" class="boxed"/>
+              <img height="100" src="images/logos/RedHat.png" class="boxed"/>
+              <img height="100" src="images/logos/edb.png" class="boxed"/>
+            </span>
+					</section>
+					<section>
+						<h2>Sprzedaż dodatkowych usług, takich jak szkolenia z obsługi, wsparcie klienta czy dostęp do dodatkowych rozszerzeń, wtyczek, dodatków i modułów</h2>
+						<span style="display: inline-block; background: white; padding: 1em;">
+              <img height="100" src="images/logos/pivotal-logo.png" class="boxed"/>
+              <img height="100" src="images/logos/docker.png" class="boxed"/>
+              <img height="100" src="images/logos/edb.png" class="boxed"/>
+            </span>
+					</section>
+					<section>
+						<h2>Otwarte oprogramowanie, może być wykorzystane jako sposób wprowadzenia klienta w inne, płatne produkty firmy</h2>
+						<span style="display: inline-block; background: white; padding: 1em;">
+              <img height="100" src="images/logos/Puppet-Logo-Amber-Black-lg.png" class="boxed"/>
+              <img height="100" src="images/logos/sonarsource.png" class="boxed"/>
+              <img height="100" src="images/logos/hashicorp.png" class="boxed"/>
+            </span>
+					</section>
+					<section>
+						<h2>Pobieranie opłaty za możliwość pobierania najnowszych, często aktualizowanych wersji swoich produktów</h2>
+						<span style="display: inline-block; background: white; padding: 1em;">
+              <img height="100" src="images/logos/RedHat.png" class="boxed"/>
+            </span>
+					</section>
+					<section>
+						<h2>Dostarczanie samego kodu źródłowego, podczas gdy wersje wykonywalne, gotowe do użytku mogą być dostarczane za opłatą</h2>
+						<span style="display: inline-block; background: white; padding: 1em;">
+              <img height="150" src="images/logos/google-logo.png" class="boxed"/>
+            </span>
+					</section>
+				</section>
+
+				<section>
+					<h1>Co zyskujemy publikując na licencji Open Source?</h1>
+					<h3>Nawet w tradycyjnej firmie</h3>
+				</section>
+
+				<section>
+					<section>
+						<h1>Mierzalne zyski</h1>
+						<h2>publikacji OSS</h2>
+					</section>
+					<section>
+						<h2>Oszczędności na infrastrukturze</h2>
+						<ul>
+							<li><mark>Każdy kod</mark> wymaga infrastruktury developerskiej</li>
+							<li class="fragment">Im większą jakość chcemy uzyskać tym <mark>więcej środków</mark> trzeba wygospodarować</li>
+							<li class="fragment">Koszty licencji, serwerów i <mark>utrzymania systemów</mark></li>
+							<li class="fragment"><mark>Continuous</mark> build, testing, inspection, integration, delivery oraz deployment</li>
+						</ul>
+						<p class="fragment">
+							Kod otwarty najczęściej nie wymaga infrastruktury, korzysta ze wspólnych, światowych zasobów (<mark class="important">Sponsoring</mark>)
+						</p>
+					</section>
+					<section>
+						<h2>Testowanie w różnych kontekstach</h2>
+						<ul>
+							<li>Użytkownicy naszego kodu testują go w <mark>innych</mark> niż my okolicznościach</li>
+							<li class="fragment">Zyskujemy na testowaniu nieprzewidzianych jeszcze use case'ów</li>
+							<li class="fragment">Zyskujemy inne pomysły na użycie naszego kodu</li>
+						</ul>
+						<p class="fragment">
+							Niestety tylko część osób zgłasza błędy. Szacuje że wacha się to <mark>od 15% do 60%</mark> - zależnie od technologii, mentalności itp.
+						</p>
+					</section>
+					<section>
+						<h2>Zgłoszenia Pull Request</h2>
+						<ul>
+							<li>Użytkownicy naszego kodu mogą zgłosić swoją, poprawioną wersję w mechaniźmie <mark>Pull Request</mark></li>
+							<li class="fragment">Możemy wymusić <mark>odpowiednią jakość</mark> takiej zmiany przez testy i progi jakości</li>
+							<li class="fragment">Możemy zyskać poprawkę lub rozszerzenie, które może się nam przydać <mark>zupełnie za darmo</mark></li>
+						</ul>
+						<p class="fragment">
+							Niestety tylko część osób zgłasza PR. Szacuje, że wacha się to <mark>od 5% do 30%</mark> - zależnie od technologii, mentalności itp.
+						</p>
+					</section>
+					<section>
+						<h2>Rozpoznawalność firmy</h2>
+						<ul>
+							<li>Używanie naszego kodu przez innych programistów powoduje <mark>wzrost rozpoznawalności</mark></li>
+							<li class="fragment">Możemy sprawdzać po <mark>ilości ściągnięć</mark>, użyć, wzmianek w portalach społecznościowych itp.</li>
+							<li class="fragment">Łatwiej o <mark>rekrutację</mark> specjalistów</li>
+							<li class="fragment">Otwartością można <mark>udowodnić jakość</mark> i wykorzystać przy wygrywaniu przetarów</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Jakość kodu</h2>
+						<ul>
+							<li>Otwartość zwykle powoduje, u programistów, chęć pisania kodu w <mark>lepszej jakości</mark></li>
+							<li class="fragment">Podpisywanie się <mark>własnym nazwiskiem</mark></li>
+							<li class="fragment">Kod opublikowany nie &quot;raczej&quot; znika z internetu</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h1>Nie mierzalne zyski</h1>
+						<h2>publikacji OSS</h2>
+					</section>
+
+					<section>
+						<h2>Dla wielu osób sama <mark>możliwość pracy</mark> nad otwartym oprogramowaniem jest motywacją do pracy</h2>
+					</section>
+
+					<section>
+						<h2>Dużo prościej szukać współpracy, łącząc wysiłki <mark>działów R&amp;D</mark> w wielu firmach w ramach różnych inicjatyw</h2>
+					</section>
+
+					<section>
+						<h2>Walka z</h2>
+						<img src="images/bigostrich.png" alt="" height="500" />
+					</section>
+				</section>
+
+				<section>
+					<section data-background-color="#fff">
+						<img src="images/logos/coi.png" alt="" />
+					</section>
+					<section>
+						<h2>Co zyskaliśmy w COI dzięki OSS?</h2>
+						<ul>
+							<li>Wiedza i potwierdzenie poprawności tworzonych rozwiązań</li>
+							<li class="fragment">Uproszczenia w infrastrukturze IT</li>
+							<li class="fragment">Zgłoszenia o błędach i poprawki PR</li>
+							<li class="fragment">Rozpoznawalność i motywację pracowników</li>
+							<li class="fragment">Projekt pl.ID się udał!</li>
+						</ul>
+					</section>
+					<section>
+						<img src="images/coi-github.jpg" alt="" class="boxed" />
+					</section>
+					<section>
+						<img src="images/puppet-jboss-forge.jpg" alt="" class="boxed" />
+					</section>
+					<section>
+						<h2>Co planujemy?</h2>
+						<ul>
+							<li>Poszerzenie ilości publikowanego kodu</li>
+							<li class="fragment">Współpraca przy standardach webowych</li>
+							<li class="fragment">Sky is the limit!</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h1>Jaki kod warto publikować, a jaki nie?</h1>
+					</section>
+					<section data-background-color="#C9342F" class="dark">
+						<h2>Jakiego kodu nie publikować?</h2>
+						<ul>
+							<li>Kompletnych rozwiązań</li>
+							<li class="fragment">Produktów skierowanych do końcowego nietechnicznego odbiorcy</li>
+							<li class="fragment">Strategicznych dla sukcesu i powodzenia firmy</li>
+							<li class="fragment">Kodu niskiej jakości, lub mocno związanego z celem biznesowym</li>
+						</ul>
+					</section>
+					<section data-background-color="#7CB82F">
+						<h2>Jaki kod publikować?</h2>
+						<ul>
+							<li>Biblioteki, reużywalne, ogólnego przeznaczenia</li>
+							<li class="fragment">Narzędzia dla programistów i administratorów</li>
+							<li class="fragment">Gotowe aplikacje skierowane do technicznego odbiorcy</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Kiedy publikować i jak często?</h2>
+						<p>
+							Jak najwcześniej i jak najczęsciej
+						</p>
+					</section>
+				</section>
+
+
+
+				<section data-background-image="images/osd_2016-bg-title-hd.png"
+          data-background-color="#231F27"
+          data-background-transition="slide"
+          class="dark">
+					<p class="vspace" />
+					<h1 class="title">Dziękuję!</h1>
+				</section>
 
         <!--
           * Kim jestem?
