--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <section>
             <h1>O czym opowiem?</h1>
             <ul>
-              <li>Czy jest Open Source?</li>
+              <li>Czym jest Open Source Software (OSS)?</li>
               <li class="fragment">Jakie zalety ma publikowanie OSS?</li>
               <li class="fragment">Jak wprowadzić publikowanie OSS w firmie?</li>
               <li class="fragment">Co zyskaliśmy w pl.ID dzięki publikowaniu OSS?</li>
@@ -68,13 +68,13 @@
         </section>
         <section>
           <section>
-            <h1>Open Source vs Free Software</h1>
+            <h1>Open Source vs<br/> Free Software</h1>
           </section>
 					<section>
 						<h2>Open Source Software (OSS)</h2>
 						<ul>
 							<li><img src="images/logos/OpenSource.png" height="200" style="float: right" /> <mark>Program marketingowy</mark> skierowany do przedsiębiorstw</li>
-							<li class="fragment">Podkreślanie <mark>zalet</mark> technicznych i rentowności otwartych modeli rozwoju</li>
+							<li class="fragment">Podkreślanie <mark>zalet technicznych</mark> i rentowności otwartych modeli rozwoju</li>
 							<li class="fragment">Pomijanie <mark>kwestii etycznych</mark> i politycznych</li>
 						</ul>
 					</section>
@@ -88,10 +88,9 @@
 					</section>
 
 					<section>
-						<h2>Podobieństwa</h2>
 						<table>
 		            <tr>
-		              <th>&nbsp;</th>
+		              <th>Podobieństwa</th>
 		              <th><img src="images/logos/OpenSource.png" height="100" /></th>
 		              <th><img src="images/logos/fsf-round-logo.svg" height="100" /></th>
 		            </tr>
@@ -114,10 +113,9 @@
 		        </table>
 					</section>
 					<section>
-						<h2>Różnice</h2>
 						<table>
 		            <tr>
-		              <th>&nbsp;</th>
+		              <th>Różnice</th>
 		              <th><img src="images/logos/OpenSource.png" height="100" /></th>
 		              <th><img src="images/logos/fsf-round-logo.svg" height="100" /></th>
 		            </tr>
@@ -145,15 +143,21 @@
 						<h1>Modele biznesowe dla Open Source</h1>
 					</section>
 					<section>
-						<h2>Oprogramowanie otwarte nie wyklucza sprzedaży i wykorzystania w sposób komercyjny</h2>
+						<h2>Oprogramowanie otwarte nie wyklucza sprzedaży i komercyjnego wykorzystania</h2>
 						<span style="display: inline-block; background: white; padding: 1em;">
               <img height="100" src="images/logos/zabbix-logo.png" class="boxed"/>
               <img height="100" src="images/logos/RedHat.png" class="boxed"/>
               <img height="100" src="images/logos/edb.png" class="boxed"/>
+              <img height="100" src="images/logos/Puppet-Logo-Amber-Black-lg.png" class="boxed"/>
             </span>
 					</section>
 					<section>
-						<h2>Sprzedaż dodatkowych usług, takich jak szkolenia z obsługi, wsparcie klienta czy dostęp do dodatkowych rozszerzeń, wtyczek, dodatków i modułów</h2>
+						<h2>Sprzedaż dodatkowych usług</h2>
+            <ul>
+              <li>szkolenia z obsługi</li>
+              <li>wsparcie klienta</li>
+              <li>dostęp do dodatkowych rozszerzeń, wtyczek, dodatków i modułów</li>
+            </ul>
 						<span style="display: inline-block; background: white; padding: 1em;">
               <img height="100" src="images/logos/pivotal-logo.png" class="boxed"/>
               <img height="100" src="images/logos/docker.png" class="boxed"/>
@@ -161,7 +165,7 @@
             </span>
 					</section>
 					<section>
-						<h2>Otwarte oprogramowanie, może być wykorzystane jako sposób wprowadzenia klienta w inne, płatne produkty firmy</h2>
+						<h2>Sposób wprowadzenia klienta w inne, płatne produkty firmy</h2>
 						<span style="display: inline-block; background: white; padding: 1em;">
               <img height="100" src="images/logos/Puppet-Logo-Amber-Black-lg.png" class="boxed"/>
               <img height="100" src="images/logos/sonarsource.png" class="boxed"/>
@@ -169,13 +173,13 @@
             </span>
 					</section>
 					<section>
-						<h2>Pobieranie opłaty za możliwość pobierania najnowszych, często aktualizowanych wersji swoich produktów</h2>
+						<h2>Pobieranie opłaty za dostęp do najnowszych, często aktualizowanych wersji swoich produktów</h2>
 						<span style="display: inline-block; background: white; padding: 1em;">
               <img height="100" src="images/logos/RedHat.png" class="boxed"/>
             </span>
 					</section>
 					<section>
-						<h2>Dostarczanie samego kodu źródłowego, podczas gdy wersje wykonywalne, gotowe do użytku mogą być dostarczane za opłatą</h2>
+						<h2>Wersje gotowe do użytku mogą być dostarczane za dodatkową opłatą</h2>
 						<span style="display: inline-block; background: white; padding: 1em;">
               <img height="150" src="images/logos/google-logo.png" class="boxed"/>
             </span>
@@ -196,7 +200,7 @@
 						<h2>Oszczędności na infrastrukturze</h2>
 						<ul>
 							<li><mark>Każdy kod</mark> wymaga infrastruktury developerskiej</li>
-							<li class="fragment">Im większą jakość chcemy uzyskać tym <mark>więcej środków</mark> trzeba wygospodarować</li>
+							<li class="fragment">Im większą jakość chcemy uzyskać, tym <mark>więcej środków</mark> trzeba wygospodarować</li>
 							<li class="fragment">Koszty licencji, serwerów i <mark>utrzymania systemów</mark></li>
 							<li class="fragment"><mark>Continuous</mark> build, testing, inspection, integration, delivery oraz deployment</li>
 						</ul>
@@ -212,7 +216,7 @@
 							<li class="fragment">Zyskujemy inne pomysły na użycie naszego kodu</li>
 						</ul>
 						<p class="fragment">
-							Niestety tylko część osób zgłasza błędy. Szacuje że wacha się to <mark>od 15% do 60%</mark> - zależnie od technologii, mentalności itp.
+							Niestety tylko część osób zgłasza błędy. Szacuje że waha się to <mark>od 15% do 60%</mark> - zależnie od technologii, mentalności itp.
 						</p>
 					</section>
 					<section>
@@ -223,7 +227,7 @@
 							<li class="fragment">Możemy zyskać poprawkę lub rozszerzenie, które może się nam przydać <mark>zupełnie za darmo</mark></li>
 						</ul>
 						<p class="fragment">
-							Niestety tylko część osób zgłasza PR. Szacuje, że wacha się to <mark>od 5% do 30%</mark> - zależnie od technologii, mentalności itp.
+							Niestety tylko część osób zgłasza PR. Szacuje, że waha się to <mark>od 5% do 30%</mark> - zależnie od technologii, mentalności itp.
 						</p>
 					</section>
 					<section>
@@ -240,23 +244,28 @@
 						<ul>
 							<li>Otwartość zwykle powoduje, u programistów, chęć pisania kodu w <mark>lepszej jakości</mark></li>
 							<li class="fragment">Podpisywanie się <mark>własnym nazwiskiem</mark></li>
-							<li class="fragment">Kod opublikowany nie &quot;raczej&quot; znika z internetu</li>
+							<li class="fragment">Kod opublikowany &quot;raczej&quot; nie znika z internetu</li>
 						</ul>
 					</section>
 				</section>
 
 				<section>
 					<section>
-						<h1>Nie mierzalne zyski</h1>
+						<h1>Niemierzalne zyski</h1>
 						<h2>publikacji OSS</h2>
 					</section>
 
 					<section>
-						<h2>Dla wielu osób sama <mark>możliwość pracy</mark> nad otwartym oprogramowaniem jest motywacją do pracy</h2>
+						<h2>Dla wielu osób sama <mark>możliwość tworzenia</mark> otwartego oprogramowania jest motywacją do pracy</h2>
 					</section>
 
 					<section>
-						<h2>Dużo prościej szukać współpracy, łącząc wysiłki <mark>działów R&amp;D</mark> w wielu firmach w ramach różnych inicjatyw</h2>
+						<h2>Dużo prościej nawiązać współpracę między firmami, łącząc wysiłki <mark>działów R&amp;D</mark> w ramach różnych inicjatyw</h2>
+            <span style="display: inline-block; background: white; padding: 1em;">
+              <img height="100" src="images/logos/W3C-Icon.png" class="boxed"/>
+              <img height="100" src="images/logos/html5-logo.png" class="boxed"/>
+              <img height="100" src="images/logos/java-ee.png" class="boxed"/>
+            </span>
 					</section>
 
 					<section>
@@ -265,10 +274,90 @@
 					</section>
 				</section>
 
+        <section data-background-color="#C9342F" class="dark">
+          <section>
+            <h1>Potęcjalne problemy przy wdrożeniu</h1>
+          </section>
+
+          <section>
+            <h2>Brak zrozumienia istoty OSS i strach przed nieznanym</h2>
+            <ul>
+              <li>kierownictwo</li>
+              <li>zespoły prawne</li>
+              <li>zespoły finansowe</li>
+              <li>zespoły developerskie i administracyjne</li>
+            </ul>
+            <p>Mylenie z rezygnacją z zysków a co za tym idzie niczym nie uzasadniony <mark>strachem</mark> przed konkurencją</p>
+          </section>
+
+          <section>
+            <h2>Kompleksy</h2>
+            <ul>
+              <li>Nieuzasadnione kompleksy</li>
+              <li>Bezsensowna chciwość</li>
+              <li>Niska samoocena</li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>Tylko 27 groupid w Sonatype OSS Staging</h2>
+            <img src="images/maven-pl-groupid.jpg" height="500" />
+          </section>
+
+          <section data-background-color="#7CB82F" class="dark">
+            <h1>Czas na Zmianę!</h1>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h1>Jaki kod warto publikować, a jaki nie?</h1>
+          </section>
+          <section data-background-color="#C9342F" class="dark">
+            <h2>Jakiego kodu nie publikować?</h2>
+            <ul>
+              <li>Pełnych, kompletnych rozwiązań</li>
+              <li class="fragment">Produktów skierowanych do <mark>końcowego, nietechnicznego</mark> odbiorcy</li>
+              <li class="fragment">Fragmentów <mark>strategicznych</mark> dla sukcesu i powodzenia firmy</li>
+              <li class="fragment">Kodu niskiej jakości, lub mocno związanego z celem biznesowym</li>
+            </ul>
+          </section>
+          <section data-background-color="#7CB82F" class="dark">
+            <h2>Jaki kod publikować?</h2>
+            <ul>
+              <li>Biblioteki, <mark>reużywalne</mark>, ogólnego przeznaczenia</li>
+              <li class="fragment"><mark>Narzędzia</mark> dla programistów i administratorów</li>
+              <li class="fragment">Gotowe aplikacje skierowane do technicznego odbiorcy</li>
+              <li class="fragment">By developers, for developers</li>
+            </ul>
+          </section>
+          <section>
+            <h2>Kiedy publikować i jak często?</h2>
+            <ul>
+              <li>Jak najwcześniej (nawet <mark>wersje wstępne</mark> w trakcie rozwoju)</li>
+              <li class="fragment">Jak <mark>najczęsciej</mark> (jak najmniejsze wdrożenia)</li>
+            </ul>
+          </section>
+          <section>
+            <h2>Ekstremalny przypadek</h2>
+            <img src="images/logos/Gov.uk_logo.svg" />
+          </section>
+        </section>
+
 				<section>
 					<section data-background-color="#fff">
-						<img src="images/logos/coi.png" alt="" />
+						<h2>Krótka historia OSS w</h2>
+            <img src="images/logos/coi.png" alt="" />
+
 					</section>
+          <section>
+            <h2>Jak wybraliśmy kod do publikacji i czemu?</h2>
+            <ul>
+              <li>Kod narzędziowy, przydatny w innych projektach</li>
+              <li class="fragment">Nie związany z biznesowym celem</li>
+              <li class="fragment">Kluczowe, strategiczne fragmenty jako reużywalne moduły i bibioteki</li>
+            </ul>
+          </section>
 					<section>
 						<h2>Co zyskaliśmy w COI dzięki OSS?</h2>
 						<ul>
@@ -286,52 +375,31 @@
 						<img src="images/puppet-jboss-forge.jpg" alt="" class="boxed" />
 					</section>
 					<section>
-						<h2>Co planujemy?</h2>
+						<h2>Co planujemy w przyszłości?</h2>
 						<ul>
-							<li>Poszerzenie ilości publikowanego kodu</li>
+							<li>Powiększenie ilości publikowanego kodu a także zakresu</li>
 							<li class="fragment">Współpraca przy standardach webowych</li>
 							<li class="fragment">Sky is the limit!</li>
 						</ul>
 					</section>
-				</section>
+				</section> 
 
-				<section>
-					<section>
-						<h1>Jaki kod warto publikować, a jaki nie?</h1>
-					</section>
-					<section data-background-color="#C9342F" class="dark">
-						<h2>Jakiego kodu nie publikować?</h2>
-						<ul>
-							<li>Kompletnych rozwiązań</li>
-							<li class="fragment">Produktów skierowanych do końcowego nietechnicznego odbiorcy</li>
-							<li class="fragment">Strategicznych dla sukcesu i powodzenia firmy</li>
-							<li class="fragment">Kodu niskiej jakości, lub mocno związanego z celem biznesowym</li>
-						</ul>
-					</section>
-					<section data-background-color="#7CB82F">
-						<h2>Jaki kod publikować?</h2>
-						<ul>
-							<li>Biblioteki, reużywalne, ogólnego przeznaczenia</li>
-							<li class="fragment">Narzędzia dla programistów i administratorów</li>
-							<li class="fragment">Gotowe aplikacje skierowane do technicznego odbiorcy</li>
-						</ul>
-					</section>
-					<section>
-						<h2>Kiedy publikować i jak często?</h2>
-						<p>
-							Jak najwcześniej i jak najczęsciej
-						</p>
-					</section>
-				</section>
-
-
+        <section data-background-color="#2ECC71" class="dark">
+          <h1>Podsumowując</h1>
+          <ul>
+            <li>Biznesowy, realny model</li>
+            <li>Szansa do wykorzystania</li>
+            <li>Nowoczesne myślenie</li>
+          </ul>
+          <p><img src="images/github-smile.png" alt="" /></p>
+        </section>
 
 				<section data-background-image="images/osd_2016-bg-title-hd.png"
           data-background-color="#231F27"
           data-background-transition="slide"
           class="dark">
 					<p class="vspace" />
-					<h1 class="title">Dziękuję!</h1>
+					<h1 class="title">Dziękuję</h1>
 				</section>
 
         <!--
