Last fixes before conf

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               style="float: right; margin: 1em"
               class="boxed" />
               Główny programista w COI / Trener w SAGES</li>
-            <li>Ewangelizuje Javą i Puppetem</li>
+            <li>Pasjonuję się i staram się promować Java i Puppet</li>
             <li>Publikacje OSS @ Gov</li>
             <li>Wiele publikacji OSS w różnych językach: java, ruby, javascript</li>
           </ul>
@@ -60,10 +60,8 @@
               <li class="fragment">Jakie zalety ma publikowanie OSS?</li>
               <li class="fragment">Jak wprowadzić publikowanie OSS w firmie?</li>
               <li class="fragment">Co zyskaliśmy w pl.ID dzięki publikowaniu OSS?</li>
+              <li class="fragment">Do kogo skierowane jest ta prezentacja?</li>
             </ul>
-          </section>
-          <section>
-            <h1>Dla kogo ta prezentacja?</h1>
           </section>
         </section>
         <section>
@@ -106,7 +104,7 @@
 		            </tr>
 								<tr>
 		              <td>Znaczenie</td>
-		              <td>Nie myli się z freeware</td>
+		              <td>Nie można pomylić z freeware</td>
 		              <td>Często mylone z freeware</td>
 		            </tr>
 
@@ -121,7 +119,7 @@
 		            </tr>
 		            <tr>
 		              <td>Idea</td>
-		              <td>Model biznesowy, oparty o otwartość oprogramowania</td>
+		              <td>Model biznesowy, oparty na otwartości oprogramowania</td>
 		              <td>Wolność do używania, modyfikacji i dystrybucji oprogramowania</td>
 		            </tr>
 								<tr>
@@ -202,7 +200,7 @@
 							<li><mark>Każdy kod</mark> wymaga infrastruktury developerskiej</li>
 							<li class="fragment">Im większą jakość chcemy uzyskać, tym <mark>więcej środków</mark> trzeba wygospodarować</li>
 							<li class="fragment">Koszty licencji, serwerów i <mark>utrzymania systemów</mark></li>
-							<li class="fragment"><mark>Continuous</mark> build, testing, inspection, integration, delivery oraz deployment</li>
+							<li class="fragment"><mark>Continuous</mark> building, testing, inspection, integration, delivery &amp; deployment</li>
 						</ul>
 						<p class="fragment">
 							Kod otwarty najczęściej nie wymaga infrastruktury, korzysta ze wspólnych, światowych zasobów (<mark class="important">Sponsoring</mark>)
@@ -212,11 +210,11 @@
 						<h2>Testowanie w różnych kontekstach</h2>
 						<ul>
 							<li>Użytkownicy naszego kodu testują go w <mark>innych</mark> niż my okolicznościach</li>
-							<li class="fragment">Zyskujemy na testowaniu nieprzewidzianych jeszcze use case'ów</li>
+							<li class="fragment">Zyskujemy na testowaniu nieprzewidzianych jeszcze przypadków użycia</li>
 							<li class="fragment">Zyskujemy inne pomysły na użycie naszego kodu</li>
 						</ul>
 						<p class="fragment">
-							Niestety tylko część osób zgłasza błędy. Szacuje że waha się to <mark>od 15% do 60%</mark> - zależnie od technologii, mentalności itp.
+							Niestety tylko część osób zgłasza błędy - <mark>od 15% do 60%</mark> - zależnie od technologii, mentalności itp.
 						</p>
 					</section>
 					<section>
@@ -227,7 +225,7 @@
 							<li class="fragment">Możemy zyskać poprawkę lub rozszerzenie, które może się nam przydać <mark>zupełnie za darmo</mark></li>
 						</ul>
 						<p class="fragment">
-							Niestety tylko część osób zgłasza PR. Szacuje, że waha się to <mark>od 5% do 30%</mark> - zależnie od technologii, mentalności itp.
+							Niestety tylko niewielka część osób zgłasza Pull Request - <mark>od 5% do 30%</mark> - zależnie od technologii, mentalności itp.
 						</p>
 					</section>
 					<section>
@@ -236,13 +234,13 @@
 							<li>Używanie naszego kodu przez innych programistów powoduje <mark>wzrost rozpoznawalności</mark></li>
 							<li class="fragment">Możemy sprawdzać po <mark>ilości ściągnięć</mark>, użyć, wzmianek w portalach społecznościowych itp.</li>
 							<li class="fragment">Łatwiej o <mark>rekrutację</mark> specjalistów</li>
-							<li class="fragment">Otwartością można <mark>udowodnić jakość</mark> i wykorzystać przy wygrywaniu przetarów</li>
+							<li class="fragment">Otwartością można <mark>udowodnić jakość</mark> i wykorzystać przy wygrywaniu przetargów</li>
 						</ul>
 					</section>
 					<section>
 						<h2>Jakość kodu</h2>
 						<ul>
-							<li>Otwartość zwykle powoduje, u programistów, chęć pisania kodu w <mark>lepszej jakości</mark></li>
+							<li>Otwartość zwykle powoduje u programistów chęć pisania kodu <mark>lepszej jakości</mark></li>
 							<li class="fragment">Podpisywanie się <mark>własnym nazwiskiem</mark></li>
 							<li class="fragment">Kod opublikowany &quot;raczej&quot; nie znika z internetu</li>
 						</ul>
@@ -276,7 +274,7 @@
 
         <section data-background-color="#C9342F" class="dark">
           <section>
-            <h1>Potęcjalne problemy przy wdrożeniu</h1>
+            <h1>Potencjalne problemy przy wdrożeniu</h1>
           </section>
 
           <section>
@@ -287,11 +285,11 @@
               <li>zespoły finansowe</li>
               <li>zespoły developerskie i administracyjne</li>
             </ul>
-            <p>Mylenie z rezygnacją z zysków a co za tym idzie niczym nie uzasadniony <mark>strachem</mark> przed konkurencją</p>
+            <p>Mylenie OSS z rezygnacją z zysków a co za tym idzie niczym nie uzasadniony <mark>strach</mark> przed utratą konkurencjności</p>
           </section>
 
           <section>
-            <h2>Kompleksy</h2>
+            <h2>Nasze kompleksy</h2>
             <ul>
               <li>Nieuzasadnione kompleksy</li>
               <li>Bezsensowna chciwość</li>
@@ -351,7 +349,7 @@
 
 					</section>
           <section>
-            <h2>Jak wybraliśmy kod do publikacji i czemu?</h2>
+            <h2>Jak wybraliśmy kod do publikacji i dlaczego?</h2>
             <ul>
               <li>Kod narzędziowy, przydatny w innych projektach</li>
               <li class="fragment">Nie związany z biznesowym celem</li>
@@ -364,8 +362,8 @@
 							<li>Wiedza i potwierdzenie poprawności tworzonych rozwiązań</li>
 							<li class="fragment">Uproszczenia w infrastrukturze IT</li>
 							<li class="fragment">Zgłoszenia o błędach i poprawki PR</li>
-							<li class="fragment">Rozpoznawalność i motywację pracowników</li>
-							<li class="fragment">Projekt pl.ID się udał!</li>
+							<li class="fragment">Rozpoznawalność i zwiększenie motywacji pracowników</li>
+							<li class="fragment">Sukces projektu pl.ID!</li>
 						</ul>
 					</section>
 					<section>
@@ -382,10 +380,10 @@
 							<li class="fragment">Sky is the limit!</li>
 						</ul>
 					</section>
-				</section> 
+				</section>
 
         <section data-background-color="#2ECC71" class="dark">
-          <h1>Podsumowując</h1>
+          <h1>Podsumowując OSS to:</h1>
           <ul>
             <li>Biznesowy, realny model</li>
             <li>Szansa do wykorzystania</li>
