--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               style="float: right; margin: 1em"
               class="boxed" />
               Główny programista w COI / Trener w SAGES</li>
-            <li>Pasjonuję się i pracuje na co dzień Java i Puppet</li>
+            <li>Pasjonuję się i pracuje na co dzień z <br /> Java i Puppet</li>
             <li>Publikacje OSS @ Gov</li>
             <li>Wiele publikacji OSS w różnych językach: java, ruby, javascript</li>
           </ul>
